<?xml version="1.0"?>
<package format="2">
  <name>op_darknet_lib</name>
  <version>1.12.0</version>
  <description>Darknet library</description>
  <maintainer email="hatem.darweesh@g.sp.m.is.nagoya-u.ac.jp">Yusuke FUJII</maintainer>
  <author email="hatem.darweesh@g.sp.m.is.nagoya-u.ac.jp">Hatem Darweesh</author>
  <license>Apache 2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>cv_bridge</depend>  
  <depend>roscpp</depend>
  <depend>roslint</depend>       
  <depend>image_transport</depend> 
  <depend>op_planner</depend>  
  <depend>op_ros_helpers</depend>       
  
</package>
